getFuelPrices.log
Fri 29 May 21:00:01 BST 2026
  File "/home/chris/Python/fuelFinder/getFuelPrices.py", line 90
    print(f'{j['price_last_updated'][:10]=}')
                ^^^^^^^^^^^^^^^^^^
SyntaxError: f-string: unmatched '['
